Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.10.3
-
None
-
Windows 11 64bit 22H2
Description
1. Using 10.7.8 at the 'C:\Program Files\MariaDB'
2. To upgrade, execute mariadb-10.10.3-winx64.msi
3. choose 'do not create dateabase for upgrade' radio button
4 'Next' untill see the upgrade screen.
5. It do things some.
6. finally I see the popup screen in the attachment.
What's next?
Attachments
Issue Links
- is caused by
-
MDEV-27105 --ssl option set as default for mariadb CLI
-
- Closed
-
- is duplicated by
-
MDEV-31637 Impossible to upgrade MariaDB (either 10.X / 11.X) on Windows.
-
- Closed
-
- relates to
-
CONC-635 named pipe transport must skip ssl
-
- Closed
-
-
MDEV-36127 Add mtr tests for mariadb-upgrade-service.exe
-
- Closed
-
No, it is certainly unintended. We are already testing the patch to fix it.